[tool.poetry]
name = "propiv-webui-tests"
version = "0.1.0"
description = ""
authors = ["francisco <fmelendezherize@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
selenium = "^4.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
